fix spoiler collapse animation, refactor indexPage

--- a/src/components/ui/spoiler/spoiler.scss
+++ b/src/components/ui/spoiler/spoiler.scss
@@ -1,14 +1,14 @@
 .spoiler {
     $root: &;
 
-    margin: 28px 0;
+    margin: 30px 0;
 
     &::after {
         content: '';
         display: block;
         height: 1px;
         background: $lain;
-        margin-top: 28px;
+        margin-top: 30px;
     }
 
     &__head {
@@ -18,9 +18,12 @@
         cursor: pointer;
         transition: color 0.15s linear;
 
+        user-select: none;
+
         &-title {
             font-weight: 400;
             font-size: 36px;
+            width: 90%;
         }
 
         &-icon {
@@ -59,8 +62,7 @@
             }
 
             &__collapse {
-                margin-top: 28px;
-                max-height: 50px;
+                margin-top: 30px;
             }
         }
     }
@@ -82,6 +84,7 @@
 
             &-icon {
                 height: 15px;
+                width: 15px;
             }
         }
 
@@ -150,6 +153,7 @@
 
             &-icon {
                 height: 14px;
+                width: 14px;
             }
         }
 
